<resources>
    <string name="app_name">AutoLibya</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="new_member">عضو جديد</string>
    <string name="new_sign">تسجيل جديد</string>
    <string name="login">تسجيل دخول</string>
    <string name="email">البريد الالكترونى</string>
    <string name="password">كلمة المرور</string>
    <string name="forget_your_pass">هل نسيت كلمة المرور ؟</string>
    <string name="loggin">دخول</string>
    <string name="name">الأسم</string>
    <string name="country">الدولة</string>
    <string name="confirm_pass">تأكيد كلمة المرور</string>
    <string name="sign">تسجيل</string>
    <string name="have_an_account">لديك حساب بالفعل ؟</string>
    <string name="contact_us">اتصل بنا</string>
    <string name="home">الرئيسية</string>
    <string name="policy">الشروط والأحكام</string>
    <string name="add_Car">اضافة سيارة</string>
    <string name="firstName">الاسم الاول</string>
    <string name="lastName">اسم العائلة</string>
    <string name="phone">رقم الجوال</string>
    <string name="address">العنوان</string>
    <string name="autoShow_sign">تسجيل معرض</string>
    <string name="member_sign">تسجيل عضو</string>
    <string name="required">مطلوب</string>
    <string name="enter_valid_email">أدخل بريد الكترونى!</string>
    <string name="pass_not_equal">كلمتى المرور غير متطابقتين!</string>
    <string name="signup">جارى التسجيل</string>
    <string name="settings">الاعدادات</string>
    <string name="logout">تسجيل الخروج</string>
    <string name="notifications">الأشعارات</string>
    <string name="cars_market">معارض السيارات</string>
    <string name="send_code_through">برجاء ارسال الكود عن طريق</string>
    <string name="send">ارسال</string>
    <string name="enter_code">ادخل الكود المرسل اليك</string>
    <string name="code">الكود</string>
    <string name="confirm_new_pass">تأكيد كلمة المرور</string>
    <string name="new_pass">كلمة المرور الجديدة</string>
    <string name="send_new_pass">برجاء ادخال كلمة المرور الجديدة</string>
    <string name="check_nameOrpass">خطأ الاسم او كلمة المرور</string>
    <string name="login_success">تم الدخول بنجاح</string>
    <string name="area">المنطقة</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_available_data">لا توجد بيانات حالية</string>
    <string name="add_your_photo">اضف صورة شخصية</string>
    <string name="photo_added_successful">تم اضافة الصورة</string>
    <string name="search_here">ابحث هنا ....</string>
    <string name="Add_new">اضافة اعلان</string>
    <string name="new_owner">المعلن</string>
    <string name="car_type">نوع المركبة</string>
    <string name="model">الموديل :</string>
    <string name="marka">الماركة</string>
    <string name="price">السعر</string>
    <string name="Add">اضافة</string>
    <string name="add_new_imgs">الصورة الرئيسية</string>
    <string name="add_photos">اضافة صور أخرى</string>
    <string name="Adding">جارى الاضافة</string>
    <string name="modal">الموديل</string>
    <string name="car_price">السعر :</string>
    <string name="edit">تعديل</string>
    <string name="delete">مسح</string>
    <string name="update_info">تحديث البيانات</string>
    <string name="update_your_photo">تغيير الصورة الشخصية</string>
    <string name="updatting">جارى التحيث</string>
    <string name="profile">الملف الشخصى</string>
    <string name="outofApp">هل تريد الخروج من التطبيق ؟</string>
    <string name="yes">موافق</string>
    <string name="dismiss">الغاء</string>
    <string name="details">التفاصيل</string>
    <string name="negotation">قابل للتفاوض</string>
    <string name="non_negotation">غير قابل للتفاوض</string>
    <string name="error_connection">خطأ فى الاتصال بالشبكة</string>
    <string name="no">عدم اظهار الرقم</string>
    <string name="ok">اظهار الرقم</string>
    <string name="neww">جديد</string>
    <string name="used">مستعمل</string>
    <string name="areas">المنطقة</string>
    <string name="category">نوع المركبة</string>
    <string name="state">حالة الاعلان</string>
    <string name="nickName">اسم الشهرة :</string>
    <string name="autoShow_phone">رقم الجوال :</string>
    <string name="autoShow_address">العنوان :</string>
    <string name="about">حول التطبيق</string>
    <string name="add_details">تفاصيل الاعلان</string>
    <string name="write_rate">اكتب تقييما</string>
    <string name="rate">التقييم</string>
    <string name="annonce">الملعن</string>
    <string name="no_available_comments">لا توجد تعليقات حالية</string>
    <string name="comments">التعليقات</string>
    <string name="contact_annonce">مراسلة البائع</string>
    <string name="product_country">بلد الصنع</string>
    <string name="add_comment">أضف تعليق ...</string>
    <string name="my_Adds">اعلاناتى</string>
    <string name="error_occured">حدث خطا ما,  برجاء المحاولة اخرى</string>
    <string name="my_Ads">اعلاناتى</string>
    <string name="no_available_adss">لا توجد اعلانات حالية</string>
    <string name="no_available_ads">لا توجد اعلانات خاصة بك</string>
    <string name="no_available_shows">لا توجد عروض متاحة حاليا</string>
    <string name="autoNews">أخبار السيارات</string>
    <string name="autoNew_details">تفاصيل الخبر</string>
    <string name="partBrands">قطع الغيار</string>
    <string name="no_available_items">لا توجد عناصر حالية</string>
    <string name="number">العدد :</string>
    <string name="part_price">السعر :</string>
    <string name="android_developers_community_discuss_hot_topics_in_android">android developers community</string>
    <string name="android_developer">Android Developer</string>
    <string name="chatters">المراسلة</string>
    <string name="no_messages_yet">لا توجد رسائل حالية</string>
    <string name="city">بلد الصنع</string>
    <string name="max_price">أعلى سعر</string>
    <string name="min_price">أقل سعر</string>
    <string name="search">بحث</string>
    <string name="no_available_results">لا توجد نتائج حالية</string>
    <string name="edit_new">تعديل الاعلان</string>
    <string name="no_available_chats">لا توجد مراسلات حالية</string>
    <string name="messages">الرسائل</string>
    <string name="old_pass">كلمة المرور السابقة</string>
    <string name="sending">جارى الارسال</string>
    <string name="change">تغيير</string>
    <string name="changing">جارى التغيير</string>
    <string name="change_Pass">تغيير كلمة المرور</string>
    <string name="Updatting">جارى التعديل</string>
    <string name="ads">الاعلانات</string>
    <string name="lorry">شاحنة</string>
    <string name="new_Car">سيارة جديدة</string>
    <string name="used_Car">سيارة مستعملة</string>
    <string name="bike">دراجة نارية</string>


    <array name="search_type_arr">
        <item>سيارة جديدة</item>
        <item>سيارة مستعملة</item>
    </array>
</resources>
